Issue #8623: Fix some strict-aliasing warnings. Patch by David Watson.